--- a/root/data/temp_work.ipynb
+++ b/root/data/temp_work.ipynb
@@ -210,6 +210,17 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 118,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "distdata = createStatsDistribution(stats, \"ANY\", \"ANY\")"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "collapsed": true
