--- a/root/data/temp_work.ipynb
+++ b/root/data/temp_work.ipynb
@@ -635,7 +635,6 @@
     "def createPlayersStdStats(playerdata, lane, role):\n",
     "    arr = []\n",
     "    for p in playerdata:\n",
-    "        stdp = createStdStats(p, lane, role)\n",
     "        ap = createAvgStats(p, lane, role)\n",
     "        if ap:\n",
     "            ap[\"GamesPlayed\"] = len(filterdata(p, lane, role))\n",
@@ -646,7 +645,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 53,
    "metadata": {
     "collapsed": false
    },
@@ -663,7 +662,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 54,
    "metadata": {
     "collapsed": false
    },
@@ -675,7 +674,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 55,
    "metadata": {
     "collapsed": false
    },
@@ -692,7 +691,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 56,
    "metadata": {
     "collapsed": false
    },
@@ -704,7 +703,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 52,
    "metadata": {
     "collapsed": false
    },
@@ -712,29 +711,74 @@
     {
      "data": {
       "text/plain": [
-       "{u'Assists': 6.629942137586515,\n",
-       " u'Deaths': 5.173745185352843,\n",
-       " u'GameDuration': 1766.8624213622786,\n",
-       " 'GamesPlayed': 22.250599520383695,\n",
-       " u'GoldEarned': 11602.671462725126,\n",
-       " u'Kills': 5.128346953476573,\n",
-       " 'Lane': 'TOP',\n",
-       " 'Role': 'SOLO',\n",
-       " u'Winner': 0.5082603561487581}"
+       "[{u'Assists': 6.629942137586515,\n",
+       "  u'Deaths': 5.173745185352843,\n",
+       "  u'GameDuration': 1766.8624213622786,\n",
+       "  'GamesPlayed': 22.250599520383695,\n",
+       "  u'GoldEarned': 11602.671462725126,\n",
+       "  u'Kills': 5.128346953476573,\n",
+       "  'Lane': 'TOP',\n",
+       "  'Role': 'SOLO',\n",
+       "  u'Winner': 0.5082603561487581},\n",
+       " {u'Assists': 8.123366518145184,\n",
+       "  u'Deaths': 4.617175941024174,\n",
+       "  u'GameDuration': 1750.932674370771,\n",
+       "  'GamesPlayed': 21.651977401129944,\n",
+       "  u'GoldEarned': 11512.185139564961,\n",
+       "  u'Kills': 6.156482242368915,\n",
+       "  'Lane': 'JUNGLE',\n",
+       "  'Role': 'NONE',\n",
+       "  u'Winner': 0.5422321634581462},\n",
+       " {u'Assists': 6.943321543594014,\n",
+       "  u'Deaths': 4.94457317946651,\n",
+       "  u'GameDuration': 1771.0378775630631,\n",
+       "  'GamesPlayed': 18.335176991150444,\n",
+       "  u'GoldEarned': 11925.486995858233,\n",
+       "  u'Kills': 6.143692282536604,\n",
+       "  'Lane': 'MIDDLE',\n",
+       "  'Role': 'SOLO',\n",
+       "  u'Winner': 0.5263009482940432},\n",
+       " {u'Assists': 7.01086635472552,\n",
+       "  u'Deaths': 5.126147451344624,\n",
+       "  u'GameDuration': 1796.5179225791278,\n",
+       "  'GamesPlayed': 20.670682730923694,\n",
+       "  u'GoldEarned': 12352.426547813258,\n",
+       "  u'Kills': 6.283234936070857,\n",
+       "  'Lane': 'BOTTOM',\n",
+       "  'Role': 'DUO_CARRY',\n",
+       "  u'Winner': 0.5144278517941233},\n",
+       " {u'Assists': 12.209426501426593,\n",
+       "  u'Deaths': 5.05093594918126,\n",
+       "  u'GameDuration': 1772.8275945640298,\n",
+       "  'GamesPlayed': 20.66949152542373,\n",
+       "  u'GoldEarned': 8880.448254782883,\n",
+       "  u'Kills': 1.8137038198289126,\n",
+       "  'Lane': 'BOTTOM',\n",
+       "  'Role': 'DUO_SUPPORT',\n",
+       "  u'Winner': 0.49357263763475706},\n",
+       " {u'Assists': 8.064770811087506,\n",
+       "  u'Deaths': 4.7162967621507255,\n",
+       "  u'GameDuration': 1758.670532464119,\n",
+       "  'GamesPlayed': 82.12690839694656,\n",
+       "  u'GoldEarned': 11542.522169045593,\n",
+       "  u'Kills': 5.6442749153136855,\n",
+       "  'Lane': 'ANY',\n",
+       "  'Role': 'ANY',\n",
+       "  u'Winner': 0.5565089881193779}]"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "avgstatdata[0]"
+    "avgstatdata"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 51,
    "metadata": {
     "collapsed": false
    },
@@ -742,24 +786,69 @@
     {
      "data": {
       "text/plain": [
-       "{u'Assists': 2.6241522565323234,\n",
-       " u'Deaths': 1.6429886824905142,\n",
-       " u'GameDuration': 217.21645661682808,\n",
-       " 'GamesPlayed': 34.771895000053874,\n",
-       " u'GoldEarned': 1968.4573198300452,\n",
-       " u'Kills': 2.3144693087731061,\n",
-       " 'Lane': 'TOP',\n",
-       " 'Role': 'SOLO',\n",
-       " u'Winner': 0.27235967985510251}"
+       "[{u'Assists': 2.6241522565323234,\n",
+       "  u'Deaths': 1.6429886824905142,\n",
+       "  u'GameDuration': 217.21645661682808,\n",
+       "  'GamesPlayed': 34.771895000053874,\n",
+       "  u'GoldEarned': 1968.4573198300452,\n",
+       "  u'Kills': 2.3144693087731061,\n",
+       "  'Lane': 'TOP',\n",
+       "  'Role': 'SOLO',\n",
+       "  u'Winner': 0.27235967985510251},\n",
+       " {u'Assists': 3.0802644159974686,\n",
+       "  u'Deaths': 1.6205316458522423,\n",
+       "  u'GameDuration': 248.47617327836835,\n",
+       "  'GamesPlayed': 30.423949996310807,\n",
+       "  u'GoldEarned': 2178.8037680403995,\n",
+       "  u'Kills': 2.5002759171170115,\n",
+       "  'Lane': 'JUNGLE',\n",
+       "  'Role': 'NONE',\n",
+       "  u'Winner': 0.25460200867196431},\n",
+       " {u'Assists': 2.4177731279358907,\n",
+       "  u'Deaths': 1.6017994992866376,\n",
+       "  u'GameDuration': 221.93680505173393,\n",
+       "  'GamesPlayed': 24.787580777667312,\n",
+       "  u'GoldEarned': 1902.2587456889376,\n",
+       "  u'Kills': 2.4772730514025043,\n",
+       "  'Lane': 'MIDDLE',\n",
+       "  'Role': 'SOLO',\n",
+       "  u'Winner': 0.25501162584448944},\n",
+       " {u'Assists': 2.39724135723278,\n",
+       "  u'Deaths': 1.6997677201118349,\n",
+       "  u'GameDuration': 231.0354254679068,\n",
+       "  'GamesPlayed': 29.815519079516296,\n",
+       "  u'GoldEarned': 2019.1772240824423,\n",
+       "  u'Kills': 2.3242543074805102,\n",
+       "  'Lane': 'BOTTOM',\n",
+       "  'Role': 'DUO_CARRY',\n",
+       "  u'Winner': 0.27943895740269631},\n",
+       " {u'Assists': 3.8142928261535283,\n",
+       "  u'Deaths': 1.8508294103837863,\n",
+       "  u'GameDuration': 237.1768781863889,\n",
+       "  'GamesPlayed': 34.382212361337331,\n",
+       "  u'GoldEarned': 1530.2352848428682,\n",
+       "  u'Kills': 1.257824471500929,\n",
+       "  'Lane': 'BOTTOM',\n",
+       "  'Role': 'DUO_SUPPORT',\n",
+       "  u'Winner': 0.28844871959058194},\n",
+       " {u'Assists': 1.9914050828841381,\n",
+       "  u'Deaths': 0.89702013140593684,\n",
+       "  u'GameDuration': 87.130106469727309,\n",
+       "  'GamesPlayed': 70.892498184497185,\n",
+       "  u'GoldEarned': 1263.5188869776791,\n",
+       "  u'Kills': 1.9581757274424447,\n",
+       "  'Lane': 'ANY',\n",
+       "  'Role': 'ANY',\n",
+       "  u'Winner': 0.094011394826530703}]"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "stddata[0]"
+    "stddata"
    ]
   },
   {
